--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
-    <string name="app_name">DrivingBuddy</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_name">Driving Buddy</string>
+    <string name="home_title">Home</string>
+    <string name="insights_title">Insights</string>
+    <string name="goals_title">Goals</string>
+    <string name="settings_title">Settings</string>
+
 </resources>
