--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,11 @@
     <string name="insights_title">Insights</string>
     <string name="goals_title">Goals</string>
     <string name="settings_title">Settings</string>
+    <string-array name="goal_options">
+        <item>Better lane changes</item>
+        <item>No hard brakes</item>
+        <item>No sharp turning</item>
+        <item>Consistent Speeds</item>
+    </string-array>
 
 </resources>
