Create interactive settings menu/pages and add citations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,6 @@
     <string name="notifs_title">Notifications</string>
     <string name="perms_title">Permissions</string>
 
-
+    <string name="logout">Logout</string>
 
 </resources>
